fix hamburger not showing up

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -100,6 +100,7 @@ dialog::backdrop {
 }
 
 nav.navbar {
+  z-index: 5;
   top: 0;
   position: sticky;
   background-color: #fff;
@@ -311,7 +312,7 @@ nav.navbar > .foot {
   z-index: 4;
   inset: 0;
   height: 100vh;
-  background-color: var(--body-color);
+  background-color: #fff;
   transform: translateY(-100vh);
   transition: transform 0.5s;
   display: flex;
@@ -327,10 +328,11 @@ nav.navbar > .foot {
 }
 
 .mobile-nav-container {
+  padding-top: 20px;
   display: flex;
   flex-direction: column;
   font-size: 1.2rem;
-  gap: 25px;
+  gap: 20px;
   flex-direction: column;
 }
 
